--- a/mp-api/package.json
+++ b/mp-api/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "mercadopago": "1.6.0",
+    "mercadopago": "^2.1.8",
     "cors": "^2.8.5"
   }
 }
