--- a/mp-api/package.json
+++ b/mp-api/package.json
@@ -1,13 +1,14 @@
 {
   "name": "mp-api",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "mercadopago": "^1.15.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "mercadopago": "^2.0.6"
   }
 }
