--- a/mp-api/package.json
+++ b/mp-api/package.json
@@ -2,13 +2,13 @@
   "name": "mp-api",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "mercadopago": "^2.5.5"
+    "mercadopago": "^2.5.17",
+    "mongodb": "^6.3.0"
   }
 }
