--- a/mp-api/package.json
+++ b/mp-api/package.json
@@ -1,22 +1,15 @@
 {
   "name": "mp-api",
   "version": "1.0.0",
-  "description": "API para rifa com Mercado Pago e MongoDB",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node index.js"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "mercadopago": "^2.0.8",
-    "mongoose": "^8.7.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.7"
-  },
-  "author": "",
-  "license": "ISC"
+    "mercadopago": "^2.5.17",
+    "mongodb": "^6.3.0"
+  }
 }
